--- a/k8s/server-depl.yaml
+++ b/k8s/server-depl.yaml
@@ -1,32 +1,55 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: server-depl
+  name: client-depl
+  namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: server
+      app: client
   template:
     metadata:
-      name: server-pod
+      name: client-pod
       labels:
-        app: server
+        app: client
     spec:
       containers:
-        - name: server
-          image: laithharb/server:v1
+        - name: client
+          image: laithharb/web-app:v1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: server-srv
+  name: client-srv
+  namespace: default
 spec:
   type: NodePort
   selector:
-    app: server
+    app: client
   ports:
     - port: 3000
       targetPort: 3000
-      nodePort: 30005
+      nodePort: 30007
       protocol: TCP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+  name: rewrite
+  namespace: default
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: auth.avaand.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: client-srv
+                port:
+                  number: 3000
