--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
         <!--    Quartz Dependencies Start     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
